Added some lorem

--- a/index.html
+++ b/index.html
@@ -5,5 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Crap portfolio</title>
   </head>
-  <body></body>
+  <body>
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Soluta, numquam.
+    Commodi eum porro deserunt quibusdam asperiores. Ipsum sit hic, ducimus
+    maxime animi placeat maiores, sed quisquam odit similique cum error.
+  </body>
 </html>
